[lghombot] Fixed null warnings and some uncaught exceptions.
Signed-off-by: Fredrik Ahlström <fredrikahlstrom75@gmail.com>